tests/ui/non_extends_attr.rs
#[angstropass::langs]
mod langs {
    #[something_else(with_attrs)]
    mod baz {}
}

fn main() {}
